[gd_scene load_steps=3 format=2]

[ext_resource path="res://Goblins/GoblinAttack.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 70.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Attack Area" type="Area2D" parent="."]

[node name="AttackCollisionShape2D" type="CollisionShape2D" parent="Attack Area"]
shape = SubResource( 1 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
